# ros2_vacation_assessment

src/: 基础信息.txt
src/answer/: CMakeLists.txt  package.xml
src/answer/include/answer/: Algorithm.h  colcor_select.h  img_handle.h  packages_connect.h
src/answer/include/serialPro/: refereeSerial.h
src/answer/launch/: run_the_node.launch.py
src/answer/msg_serializer/: check.h  writer.h
src/answer/src/: Algorithm.cpp  test.cpp
src/answer/src/image_handle/: img_handle.cpp
src/answer_infos/: CMakeLists.txt  package.xml
src/answer_infos/msg/: Map.msg  MapAbstract.msg  MapPoint.msg  RobotLocation.msg  WayPoints.msg
src/answer_infos/srv/: IfCanGo.srv  WayService.srv
